[gd_scene load_steps=2 format=3 uid="uid://bg8ijgtx1a8xg"]

[ext_resource type="Script" path="res://examples/attribute_buffing/attribute_buffing.gd" id="1_xah1k"]

[node name="AttributeBuffing" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xah1k")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="AddBuff5" type="Button" parent="HBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "Add buff (5)"

[node name="AddBuff10" type="Button" parent="HBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "Add buff (10)"

[node name="RemoveBuff5" type="Button" parent="HBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "Remove buff (5)"

[node name="RemoveBuff10" type="Button" parent="HBoxContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "Remove buff (10)"

[node name="ClearAll" type="Button" parent="HBoxContainer/Buttons"]
layout_mode = 2
text = "Clear All"

[node name="Stats" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Stats"]
layout_mode = 2
text = "Attribute stats"

[node name="CurrentValue" type="Label" parent="HBoxContainer/Stats"]
unique_name_in_owner = true
layout_mode = 2

[node name="AppliedBuffs" type="VBoxContainer" parent="HBoxContainer/Stats"]
unique_name_in_owner = true
layout_mode = 2
